# hs2025

./: .clangd  .sccignore  CMakeLists.txt  README.md  pyrightconfig.json
cmake/misc/: scc.cmake
misc/benchmark_pp/: complexity_chart.py  dry.py  speedup_chart.py
misc/cuda_grid_heuristics/: CMakeLists.txt
misc/cuda_grid_heuristics/include/: cuda_grid_heuristics.hpp
misc/cuda_timer/: CMakeLists.txt
misc/cuda_timer/src/: cuda_timer.cpp
work1/: CMakeLists.txt
work1/benchmarks/: CMakeLists.txt
work1/benchmarks/src/: benchmarks.cpp
work1/benchmarks/tools/: complexity_chart.py  make_benchmarks_chart.py  make_chart.py  speedup_chart.py
work1/core/: CMakeLists.txt
work1/core/include/work1/: kernel_vadd.cuh  vadd.hpp
work1/core/src/: vadd.cu
work1/tests/: CMakeLists.txt
work1/tests/src/: tests.cpp
work1/utils/benchmark_pp/: complexity_chart.py  speedup_chart.py
work1/utils/cudagh/include/: cudagh.hpp
work1/work1/: CMakeLists.txt
work1/work1/include/work1/: kernel_vadd.cuh  vadd.hpp  wrapper_vadd.hpp
work1/work1/src/: vadd.cu  wrapper_vadd.cu
work2/: CMakeLists.txt
work2/benchmarks/: CMakeLists.txt
work2/benchmarks/include/work2/benchmarks/: bm_gpu_mm_preset1.hpp  bm_gpu_mm_template.hpp
work2/benchmarks/src/: benchmarks.cpp
work2/core/: CMakeLists.txt
work2/core/include/work2/matrix/: devblock.hpp  matrix.cuh  matrix.hpp  matrix_expr.hpp  matrix_expr_kind.hpp  matrix_kind.hpp  matrix_operators.hpp  matrix_ops.hpp  matrix_options.hpp  matrix_view.cuh  matrix_view_kind.hpp  scalar_kind.hpp
work2/core/include/work2/mm_impls/: dispatch_binary.hpp  kernel_mm_naive.cuh  kernel_mm_shmem.cuh  mm_dispatch.hpp  mm_naive.hpp  mm_shmem.hpp  naive_bundle.hpp  op_bundle.hpp  op_bundle_kind.hpp  shmem_bundle.hpp
work2/core/src/: matrix_ops.cpp  mm_naive.cu  mm_shmem.cu
work2/tests/: CMakeLists.txt
work2/tests/include/work2/tests/: matrix_test_helpers.hpp  test_mm_preset_no_tiling.hpp  test_mm_preset_tiling.hpp  tests_mm_template.hpp
work2/tests/src/: tests.cpp
work2/work2/include/work2/matrix/: devblock.cuh  hd_attr.cuh  matrix.cuh  scalar_kind.cuh
work2/work2/include/work2/mm_impls/: mm_dispatch.hpp  mm_naive.hpp  mm_shmem.hpp  op_impl_bundle_kind.hpp  shmem_bundle.hpp
work2/work2/src/: mm_naive.cu  mm_shmem.cu
work3/: CMakeLists.txt
work3/benchmarks/: CMakeLists.txt
work3/benchmarks/src/: benchmarks.cpp
work3/core/: CMakeLists.txt
work3/core/include/work3/mm_impls/: kernel_mm_wmma.cuh  mm_wmma.hpp  wmma_bundle.hpp
work3/core/src/: mm_wmma.cu
work3/tests/: CMakeLists.txt
work3/tests/src/: tests.cpp
work3/work3/: CMakeLists.txt
work3/work3/include/work3/: kernel_mm_wmma.cuh  mm_wmma.hpp
work3/work3/include/work3/mm_impls/: kernel_mm_wmma.cuh
work3/work3/src/: mm_wmma.cu
work4/: CMakeLists.txt
work4/benchmarks/: CMakeLists.txt
work4/benchmarks/src/: benchmarks.cpp
work4/core/: CMakeLists.txt
work4/core/include/work4/: add.hpp  default_bundle.hpp  dispatch_ternary.hpp  fused_linear.hpp  fused_linear_operator.hpp  graph_linear.hpp  graph_linear_operator.hpp  graph_suit.hpp  kernel_add.cuh  kernel_broadcast_add.cuh  kernel_linear.cuh  naive_linear.hpp  naive_linear_operator.hpp
work4/core/src/: add.cu  fused_linear.cu  graph_linear.cu  naive_linear.cu
work4/tests/: CMakeLists.txt
work4/tests/src/: tests.cpp
work5/: CMakeLists.txt
work5/core/: CMakeLists.txt
work5/core/include/: batchnorm.hpp
works2-5/: CMakeLists.txt
works2-5/benchmarks/: CMakeLists.txt
works2-5/tests/: CMakeLists.txt
works2-5/work2/: CMakeLists.txt
works2-5/work2/include/: kernel_mm_naive.cuh  matrix_view.cuh  wrapper_mm_naive.hpp
works2_5/: CMakeLists.txt
works2_5/benchmarks/: CMakeLists.txt
works2_5/benchmarks/src/: benchmarks.cpp
works2_5/tests/: CMakeLists.txt
works2_5/tests/src/: tests.cpp  tests.cu
works2_5/work2/: CMakeLists.txt
works2_5/work2/include/work2/: continuous_block.cuh  kernel_mm_naive.cuh  matrix_kind.hpp  matrix_view.cuh  matrix_view.hpp  mm_dispatch.hpp  mm_naive.hpp
works2_5/work2/src/: matrix_view_cpu_impl.cpp  matrix_view_cuda_impl.cu  mm_naive.cu
works2_5/work3/: CMakeLists.txt
works2_5/work3/include/work3/: kernel_mm_shmem.cuh  mm_shmem.hpp
works2_5/work3/src/: mm_shmem.cu
works2_5/work4/include/work4/: kernel_mm_wmma copy.cuh  kernel_mm_wmma.cuh  mm_wmma.hpp
works2_5/work4/src/: mm_wmma.cu
